test/spec_vectors/i64/fail/module_10.wat
(module (func (result i64) (i64.rotr (i32.const 0) (f32.const 0))))